[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/sprites/hood-Sheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/boss.gd" type="Script" id=2]
[ext_resource path="res://scripts/weak_spot.gd" type="Script" id=3]

[sub_resource type="Animation" id=6]
resource_name = "fade"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.470588 ), Color( 1, 1, 1, 0.0313726 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "stand"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="CircleShape2D" id=1]
radius = 14.8945

[sub_resource type="CircleShape2D" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 25.9507

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 123.794, 100.771 )

[node name="boss" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 3
hframes = 8
frame = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 6 )
anims/stand = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="weak_spots" type="Area2D" parent="."]
visible = false
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="weak_spots"]
position = Vector2( -60.4988, -41.5027 )
shape = SubResource( 2 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="weak_spots"]
position = Vector2( 65.6228, -47.1066 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="weak_spots"]
position = Vector2( 64.8284, 39.8833 )
shape = SubResource( 2 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="weak_spots"]
position = Vector2( -66.6496, 41.4721 )
shape = SubResource( 2 )

[node name="sensor_weak" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sensor_weak"]
shape = SubResource( 3 )

[node name="sensor_attack" type="Area2D" parent="."]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="sensor_attack"]
shape = SubResource( 4 )

[node name="shoot_timer" type="Timer" parent="."]
wait_time = 3.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -35.1221, 0 )
[connection signal="damage" from="weak_spots" to="." method="_on_weak_spots_damage"]
[connection signal="area_entered" from="sensor_weak" to="." method="_on_sensor_weak_area_entered"]
[connection signal="body_entered" from="sensor_attack" to="." method="_on_sensor_attack_body_entered"]
[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
